package fr.unice.polytech.citadelle.game.purple_districts;

import fr.unice.polytech.citadelle.game.SpellDistrict;

public class Laboratory  extends SpellDistrict {

    public Laboratory(String name, int value, String color, String nameOfFamily) {
        super(name, value, color, nameOfFamily);
    }

}
